--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="...">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Api Hack Capstone</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -15,6 +16,7 @@
 			<fieldset>
 				<label for='cityInput'></label>
 				<input id='cityInput' type='text' name='cityInput' placeholder='Enter a city' required>
+				<i class="far fa-times-circle"></i>
 				<div class="radioChecks">
 					<input type='checkbox' value="Maps" id="maps">
 					<label for='maps'>Maps</label>
