feature google map autocomplete & feature wikipedia API added

--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
 		</form>
 	</header>
 
-	<main role='content' class="main" hidden>
-		<div class="googleMaps" hidden></div>
-		<div class="wikipedia" hidden></div>
-		<div class="zomato" hidden></div>
+	<main role='content' class="main" >
+		<div class="googleMaps" ></div>
+		<div class="wikipedia" ></div>
+		<div class="zomato" ></div>
 	</main>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATakAmdToENDu2ttZjIWr71_E-pPylYEs"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATakAmdToENDu2ttZjIWr71_E-pPylYEs&libraries=places"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATakAmdToENDu2ttZjIWr71_E-pPylYEs"></script> -->
 	<script src="index.js"></script>
 </body>
 </html>
