feature weather API added

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		</form>
 	</header>
 
-	<main role='content' class="main" >
-		<div class="googleMaps" ></div>
-		<div class="wikipedia" ></div>
-		<div class="zomato" ></div>
+	<main role='content' class="main" hidden>
+		<div class="googleMaps" hidden></div>
+		<div class="wikipedia" hidden></div>
+		<div class="weather" hidden></div>
 	</main>
 
 
