feature checkbox checked/unchecked renders API data added

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 		<form action="#" class="js-form">
 			<fieldset>
 				<div class="controls">
-					<div class='test'>
-					<label for='cityInput'></label>
-					<input id='cityInput' type='search' name='cityInput' placeholder='Enter a city' required>
+					<div class='searchInput'>
+						<label for='cityInput'></label>
+						<input id='cityInput' type='search' name='cityInput' placeholder='Enter a city in the US' required>
 					</div>
 
 					<div class="radioChecks">
-						<input type='checkbox' value="Maps" id="maps" checked>
+						<input type='checkbox' value="Maps" id="maps" >
 						<label for='maps'>Maps</label>
-						<input type='checkbox' value="wikipedia" id="wikipedia" checked>
+						<input type='checkbox' value="wikipedia" id="wikipedia" >
 						<label for='maps'>Wikipedia</label>
-						<input type='checkbox' value="Zomato" id="zomato" checked>
-						<label for='maps'>Zomato</label>
-						<input type='checkbox' value="Weater" id="weather" checked>
+						<input type='checkbox' value="Weater" id="weather" >
 						<label for='weather'>Weather</label>
+						<input type='checkbox' value="Zomato" id="zomato" >
+						<label for='maps'>Zomato</label>
 					</div>
 
 					<button role='submit'>Submit</button>
