reworked weather component to fetch results via coordinates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="...">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Api Hack Capstone</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Slab:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -22,14 +22,14 @@
 					</div>
 
 					<div class="radioChecks">
-						<input type='checkbox' value="maps" id="maps" >
-						<label for='maps'>Maps</label>
 						<input type='checkbox' value="wikipedia" id="wikipedia" >
 						<label for='wikipedia'>Wikipedia</label>
 						<input type='checkbox' value="weather" id="weather" >
 						<label for='weather'>Weather</label>
+						<input type='checkbox' value="maps" id="maps" >
+						<label for='maps'>Maps</label>
 						<input type='checkbox' value="zomato" id="zomato" >
-						<label for='zomato'>Zomato</label>
+						<label for='zomato'>Food</label>
 					</div>
 
 					<button role='submit'>Submit</button>
