minor changes in markup

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 						<input id='cityInput' type='search' name='cityInput' placeholder='Enter a city in the US' required>
 					</div>
 
-					<div class="radioChecks">
-						<input type='checkbox' value="wikipedia" id="wikipedia" >
+			        <div class="radioChecks">
+						<input type='checkbox' value="wikipedia" id="wikipedia" checked>
 						<label for='wikipedia'>Wikipedia</label>
-						<input type='checkbox' value="weather" id="weather" >
+						<input type='checkbox' value="weather" id="weather" checked>
 						<label for='weather'>Weather</label>
-						<input type='checkbox' value="maps" id="maps" >
+						<input type='checkbox' value="maps" id="maps" checked>
 						<label for='maps'>Maps</label>
-						<input type='checkbox' value="zomato" id="zomato" >
+						<input type='checkbox' value="zomato" id="zomato" checked>
 						<label for='zomato'>Food</label>
-					</div>
+			        </div>
 
 					<button role='submit'>Submit</button>
 				</div>
@@ -56,6 +56,7 @@
 	</main>
 
 
+	<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATakAmdToENDu2ttZjIWr71_E-pPylYEs&libraries=places"></script>
 	<script src="index.js"></script>
